chore(Topbar): Prevent topbar overflow

--- a/uplink_skeleton/src/components/chat/styles.scss
+++ b/uplink_skeleton/src/components/chat/styles.scss
@@ -30,6 +30,12 @@
 
 #compose .topbar .children .username {
     color: var(--text-color);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+            line-clamp: 1; 
+    -webkit-box-orient: vertical;
 }
 
 #compose .topbar .children .status {
